prevent line break on THE WOODPECKER

--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ footer .next {
 
 .table-of-contents {
 	list-style: none;
-	max-width: 33em;
+	max-width: 36em;
 	margin: 5em auto;
 	padding: 0;
 }
